// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly on big screens 1`] = `
<div>
  <div
    className="Flex-root TopBar-root Flex-itemGutter Flex-wrap Flex-alignBaseline Flex-directionRow"
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`renders correctly on small screens 1`] = `
<div>
  <div
    className="Flex-root TopBar-root Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;
